--- a/frontend/src/components/Title/Title.scss
+++ b/frontend/src/components/Title/Title.scss
@@ -10,10 +10,11 @@
     }
 }
 
-@media  only screen and (max-width: 1000px) {
+
+@media  only screen and (max-width: 400px) {
     .title {
         .title-text {
-            display: none;
+            font-size: 23px;
         }
     }
 }
