changed header design

--- a/frontend/src/components/NavMenuIcon/NavMenuIcon.scss
+++ b/frontend/src/components/NavMenuIcon/NavMenuIcon.scss
@@ -1,7 +1,27 @@
 @import '../../styles/scss/mixins';
+@import '../../styles/scss/variables';
 
 .nav-icon {
   display: none;
+  .header-container {
+    .header-bar {
+      color: black;
+      background: transparent;
+      box-shadow: none;
+    }
+  }
+  .nav-item {
+    text-decoration: none;
+    .nav-item-text {
+        font-size: 14px;
+        font-weight: 600;
+        color: var(--text-color);
+        cursor: pointer;
+        &:hover {
+            color: $hover_color
+        }
+    }
+}
 }
 
 @media only screen and (max-width: 1200px) {
