--- a/frontend/src/containers/Qualification/Qualification.scss
+++ b/frontend/src/containers/Qualification/Qualification.scss
@@ -1,8 +1,10 @@
+@import '../../styles/scss/variables';
+
 .qualification {
     .qualification-card {
         padding: 50px;
         margin-top: 40px;
-        background-color: rgb(182, 222, 211);
+        background-color: $hover_color;
         width: '100%';
         height: 300px;
         display: flex;
@@ -15,7 +17,7 @@
             font-size: 140px;
         }
         .computer-science {
-            color: rgb(55, 74, 55)
+            color: rgb(33, 54, 33)
         }
     }
 }
